--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,19 +1,10 @@
-.container {
-  min-height: 100vh;
-  padding: 0 0.5rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+.container { 
+  padding: 0 0.5rem;  
 }
 
 .main {
-  padding: 5rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  padding: 2rem 0; 
+  display: block; 
 }
 
 .footer {
