--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,19 @@
+@font-face {
+  font-family: dana;
+  font-style: normal;
+  font-weight: 500;
+  src: url('../public/fonts/eot/dana-medium.eot');
+  src: url('../public/fonts/eot/dana-medium.eot?#iefix')
+      format('embedded-opentype'),
+    /* IE6-8 */ url('../public/fonts/woff2/dana-medium.woff2') format('woff2'),
+    /* FF39+,Chrome36+, Opera24+*/ url('../public/fonts/woff/dana-medium.woff')
+      format('woff'); /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
+}
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: dana !important;
 }
 
 a {
@@ -15,16 +25,82 @@ a {
   box-sizing: border-box;
 }
 
+.mainContainer {
+  display: flex;
+  align-items: flex-start;
+  justify-content: right;
+}
+
+.rightSection {
+  box-shadow: 0px 0px 4px #e3e3e3;
+  border-radius: 4px;
+  padding: 16px;
+}
+
+.folderDropDown ul {
+  width: 180px;
+  text-align: right;
+}
+
+.leftSection {
+  margin-right: 16px;
+  width: 70%;
+}
+
+.BreadcrumbContainer nav {
+  font-size: 14px;
+}
+
+.folderStructureTree {
+  width: 280px;
+  height: 80vh;
+  overflow-y: scroll;
+}
+
+.uploadButton {
+  background-color: #3498ff !important;
+  border-radius: 6px;
+  margin-left: 8px;
+}
+
+div ul li span {
+  text-align: right;
+  direction: rtl;
+  padding-right: 12px !important;
+}
+
+.uploadButton div:hover,
+.uploadButton div:focus,
+.rs-picker-toggle-active {
+  background-color: #3498ff !important;
+}
+.uploadButton * {
+  color: #fff !important;
+}
+
 form {
   display: flex;
-  justify-content: center;
-  align-items: flex-end;
+  justify-content: flex-end;
+  align-items: flex-start;
+}
+
+.rs-list {
+  box-shadow: none !important;
 }
 .rs-list-item {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  box-shadow: none !important;
 }
 .rs-picker-cascader-menu-items div {
   width: 100% !important;
+}
+
+.rs-modal-footer {
+  text-align: left !important;
+}
+
+.updateBadge {
+  cursor: pointer;
 }
