--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,118 +1,143 @@
 @font-face {
-  font-family: dana;
-  font-style: normal;
-  font-weight: 500;
-  src: url('../public/fonts/eot/dana-medium.eot');
-  src: url('../public/fonts/eot/dana-medium.eot?#iefix')
-      format('embedded-opentype'),
-    /* IE6-8 */ url('../public/fonts/woff2/dana-medium.woff2') format('woff2'),
-    /* FF39+,Chrome36+, Opera24+*/ url('../public/fonts/woff/dana-medium.woff')
-      format('woff'); /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
+	font-family: dana;
+	font-style: normal;
+	font-weight: 500;
+	src: url('../public/fonts/eot/dana-medium.eot');
+	src: url('../public/fonts/eot/dana-medium.eot?#iefix')
+			format('embedded-opentype'),
+		/* IE6-8 */ url('../public/fonts/woff2/dana-medium.woff2') format('woff2'),
+		/* FF39+,Chrome36+, Opera24+*/ url('../public/fonts/woff/dana-medium.woff')
+			format('woff'); /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
 }
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: dana !important;
+	padding: 0;
+	margin: 0;
+	font-family: dana !important;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+	color: inherit;
+	text-decoration: none;
 }
 
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 .mainContainer {
-  display: flex;
-  align-items: flex-start;
-  justify-content: right;
+	display: flex;
+	align-items: flex-start;
+	justify-content: right;
 }
 
 .rightSection {
-  box-shadow: 0px 0px 4px #e3e3e3;
-  border-radius: 4px;
-  padding: 16px;
+	box-shadow: 0px 0px 4px #e3e3e3;
+	border-radius: 4px;
+	padding: 16px;
 }
 
 .folderDropDown ul {
-  width: 180px;
-  text-align: right;
+	width: 180px;
+	text-align: right;
 }
 
 .leftSection {
-  margin-right: 16px;
-  width: 70%;
+	margin-right: 16px;
+	width: 70%;
 }
 
 .BreadcrumbContainer nav {
-  font-size: 14px;
-  text-align: right;
+	font-size: 14px;
+	text-align: right;
 }
 
 .folderStructureTree {
-  width: 280px;
-  height: 80vh;
-  overflow-y: scroll;
+	width: 280px;
+	height: 80vh;
+	overflow-y: scroll;
 }
+.folderStructureTree .rs-list-item div p{display: inline-block;}
 
 .uploadButton {
-  background-color: #3498ff !important;
-  border-radius: 6px;
-  margin-left: 8px;
+	background-color: #3498ff !important;
+	border-radius: 6px;
+	margin-left: 8px;
 }
 
 div ul li span {
-  text-align: right;
-  direction: rtl;
-  padding-right: 12px !important;
+	text-align: right;
+	direction: rtl;
+	padding-right: 12px !important;
 }
 
 .uploadButton div:hover,
 .uploadButton div:focus,
 .rs-picker-toggle-active {
-  background-color: #3498ff !important;
+	background-color: #3498ff !important;
 }
 .uploadButton * {
-  color: #fff !important;
+	color: #fff !important;
 }
 
 form {
-  display: flex;
-  justify-content: flex-end;
-  align-items: flex-start;
+	display: flex;
+	justify-content: flex-end;
+	align-items: flex-start;
 }
 
 .rs-list {
-  box-shadow: none !important;
+	box-shadow: none !important;
 }
 .rs-list-item {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  box-shadow: none !important;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	box-shadow: none !important;
 }
 .rs-picker-cascader-menu-items div {
-  width: 100% !important;
+	width: 100% !important;
 }
 
 .rs-modal-footer {
-  text-align: left !important;
+	text-align: left !important;
 }
 .FolderPath {
-  font-size: 11px;
+	font-size: 11px;
 }
 
 .updateBadge {
-  cursor: pointer;
+	cursor: pointer;
 }
 
 .folderStructureTree .rs-list-item {
-  cursor: pointer;
+	cursor: pointer;
 }
 
-.rs-picker-cascader-menu-column{
-  height: 300px !important;
+.rs-picker-cascader-menu-column {
+	height: 300px !important;
+}
+
+.itemNumbers {
+	text-align: right;
+}
+.itemNumbers .rs-dropdown-menu {
+	display: inline-block;
+	width: 155px;
+	height: 33px;
+	margin-left: 10px;
+	overflow: hidden;
+}
+
+.itemNumbers  button{
+  direction: rtl;
+  padding-right: 12px !important;
+}
+.itemNumbers  button svg{
+  display: none;
+}
+
+.itemNumbers .rs-dropdown-menu li {
+	display: inline-block !important;
+	padding: 1px 12px !important;
 }
